# Games-Engineering

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.html  installer.nsi  stylesheet.css
comps/: ai_components.cpp  ai_components.hpp  control_components.cpp  control_components.hpp  graphic_components.cpp  graphic_components.hpp
engine/: ecm.cpp  ecm.hpp  engine_utils.cpp  engine_utils.hpp  game_parameters.hpp  game_system.cpp  game_system.hpp  physics.cpp  physics.hpp  renderer.cpp  renderer.hpp
lib/level_loader/: CMakeLists.txt  level_system.hpp
resources/levels/: level1.txt  level10.txt  level2.txt  level3.txt  level4.txt  level5.txt  level6.txt  level7.txt  level8.txt  level9.txt
src/: ai_components.cpp  ai_components.hpp  character_components.cpp  character_components.hpp  control_components.cpp  control_components.hpp  graphic_components.cpp  graphic_components.hpp  main.cpp  physics_components.cpp  physics_components.hpp  physics_comps.cpp  scenes.cpp  scenes.hpp  shooting_component.cpp  shooting_component.hpp
tile_level_loader/: level_system.cpp  level_system.hpp
website/: index.html  stylesheet.css
